# HaniwaSlayer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
src/: camera.hpp  entity.cpp  entity.hpp  framebuffer.hpp  game_app.hpp  glad.h  gmath.hpp  helper.hpp  main.cpp  player.hpp  sprite.hpp  sprite_sheet.hpp  tilemap.hpp
